--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "@angular/platform-browser": "14.0.0",
     "@angular/platform-browser-dynamic": "14.0.0",
     "@angular/router": "14.0.0",
+    "@auth0/auth0-angular": "^2.0.2",
+    "@ngrx/component-store": "^15.4.0",
+    "@ngrx/effects": "^15.4.0",
+    "@ngrx/entity": "^15.4.0",
+    "@ngrx/router-store": "^15.4.0",
+    "@ngrx/store": "^15.4.0",
     "@nrwl/workspace": "^10.3.0",
     "concurrently": "^5.3.0",
     "rxjs": "~6.6.0",
