--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "@angular/platform-browser-dynamic": "14.0.0",
     "@angular/router": "14.0.0",
     "@auth0/auth0-angular": "^2.0.2",
-    "@ngrx/component-store": "^15.4.0",
-    "@ngrx/effects": "^15.4.0",
-    "@ngrx/entity": "^15.4.0",
-    "@ngrx/router-store": "^15.4.0",
-    "@ngrx/store": "^15.4.0",
+    "@ngrx/component-store": "^14.0.0",
+    "@ngrx/effects": "^14.0.0",
+    "@ngrx/entity": "^14.0.0",
+    "@ngrx/router-store": "^14.0.0",
+    "@ngrx/store": "^14.0.0",
+    "@ngrx/store-devtools": "^14.0.0",
     "@nrwl/workspace": "^10.3.0",
     "concurrently": "^5.3.0",
+    "nx": "^15.8.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -44,6 +46,7 @@
     "@angular-devkit/build-angular": "14.0.0",
     "@angular/cli": "14.0.0",
     "@angular/compiler-cli": "14.0.0",
+    "@ngrx/schematics": "^14.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -55,6 +58,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.6.0",
+    "ng-packagr": "^14.0.0",
     "ngx-build-plus": "^14.0.0",
     "protractor": "~7.0.0",
     "serve": "^11.3.2",
